# eOMI2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  extra_bindings.h  partitions.csv  sdkconfig.defaults  sdkconfig.psram.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
boards/: esp32-s2-saola-1.toml  esp32-s2-wrover.toml
doc/: odf.txt  omi-lite.md  omi.txt  tuomas_keyrilainen_masters_thesis.txt  wifi-secure-onboarding-spec.md
doc/masters_thesis_src/: 1introduction.tex  2background.tex  3environment.tex  4methods.tex  5implementation.tex  6evaluation.tex  7discussion.tex  8conclusions.tex  aalto-thesis.sty  ac-bangbang.xml  acronyms.tex  appendices.tex  deviceRead.xml  humiSub.xml  objectsSub.xml  scripts.xml  sources.bib  tuomas_keyrilainen_masters_thesis.tex
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: fuzz_odf_path.rs  fuzz_omi_parse.rs  fuzz_script_exec.rs
scripts/: _claim-wait.sh  _common.sh  build-production.sh  claim-device.sh  coverage.sh  device-lock-server.py  list-devices.sh  measure-lite-json.sh  release-device.sh  run-e2e.sh  run-fuzz.sh  run-with-device.sh  setup-esp.sh  start-lock-server.sh  stop-lock-server.sh
specs/001-operational-resilience/: plan.md  spec.md
specs/001-operational-resilience/checklists/: requirements.md
specs/002-wifi-provisioning/: spec.md
specs/002-wifi-provisioning/checklists/: requirements.md
specs/003-odf-readitem/: spec.md
specs/003-odf-readitem/checklists/: requirements.md
specs/004-mdns-dns-sd/: spec.md
specs/004-mdns-dns-sd/checklists/: requirements.md
specs/005-gpio-peripheral-system/: spec.md
specs/005-gpio-peripheral-system/checklists/: requirements.md
specs/006-infoitem-onread-trigger/: plan.md  spec.md
specs/006-infoitem-onread-trigger/checklists/: requirements.md
specs/007-lite-json-parser/: plan.md  spec.md
specs/007-lite-json-parser/checklists/: requirements.md
specs/008-javascript-callback-subscriptions/: spec.md
specs/008-system-stats/: plan.md
specs/009-ota-updates/: spec.md
specs/010-wifi-secure-onboarding/: spec.md
src/: board.rs  callback.rs  callback_url.rs  captive_portal.rs  compress.rs  crypto.rs  device.rs  dht11.rs  dns.rs  error.rs  html.rs  http.rs  js.rs  lib.rs  log_util.rs  main.rs  mdns.rs  mdns_discovery.rs  mem_stats.rs  nvs.rs  ota.rs  pages.rs  psram.rs  server.rs  sync_util.rs  temp_sensor.rs  time_sync.rs  wifi_ap.rs  wifi_cfg.rs  wifi_sm.rs  ws2812.rs
src/boards/: esp32_s2_wrover.rs  mod.rs
src/gpio/: adc.rs  driver.rs  encoding.rs  mod.rs  pwm.rs
src/gpio/peripheral/: i2c.rs  mod.rs  spi.rs  uart.rs
src/json/: error.rs  lexer.rs  mod.rs  parser.rs  serializer.rs
src/odf/: item.rs  mod.rs  object.rs  tree.rs  value.rs
src/omi/: cancel.rs  delete.rs  engine.rs  error.rs  mod.rs  read.rs  response.rs  subscriptions.rs  write.rs
src/scripting/: bindings.rs  convert.rs  engine.rs  error.rs  ffi.rs  mod.rs  resolve.rs
src/wsop/: crypto.rs  display.rs  gateway.rs  joiner.rs  mod.rs  onboard_sm.rs  protocol.rs
tasks/: architecture-review.md  e2e-tests.md  integration-tests.md  next-steps.md  omi-lite-implementation.md
tests/: board_config.rs  engine_integration.rs  error_paths.rs  http_routing.rs  js_callback_edge_cases.rs  js_callback_integration.rs  js_callback_onread.rs  json_compat.rs  json_roundtrip.rs  lite_json_memory.rs  mdns_lifecycle.rs  memory_budget.rs  onread_integration.rs  onwrite_onread_independence.rs  readitem_integration.rs  scripting_integration.rs  sntp_lifecycle.rs  subscription_lifecycle.rs  wifi_provisioning.rs  wsop_roundtrip.rs
tests/common/: mod.rs
tests/e2e/: conftest.py  device_lock.py  helpers.py  pyproject.toml  serial_bridge.py  test_00_boot.py  test_auth.py  test_boot.py  test_flash_optimizations.py  test_gpio.py  test_gpio_analog_pwm.py  test_gpio_peripherals.py  test_http_delete.py  test_http_read.py  test_http_write.py  test_js_callback.py  test_mdns_discovery.py  test_ntp_time.py  test_onread.py  test_ota.py  test_pages.py  test_persistence.py  test_readitem.py  test_rest_discovery.py  test_scripting.py  test_sensors.py  test_stress.py  test_subscriptions.py  test_system_stats.py  test_websocket.py  test_wifi_provisioning.py  test_wsop_color_change.py  test_wsop_denial.py  test_wsop_no_gateway.py  test_wsop_onboarding.py  test_wsop_replay.py
tests/e2e/bridge-fw/: Cargo.toml  sdkconfig.defaults
tests/e2e/bridge-fw/.cargo/: config.toml
tests/e2e/bridge-fw/src/: main.rs
