[package]
name = "reconfigurable-device"
version = "0.1.0"
authors = ["Tuomas Keyriläinen <tuomas.keyrilainen@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "reconfigurable-device"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
required-features = ["esp"]

[profile.release]
opt-level = "s"
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp", "json", "scripting"]
std = []
esp = ["dep:esp-idf-svc", "dep:embuild", "json"]
json = ["dep:serde", "dep:serde_json"]
scripting = ["std", "dep:cc"]
psram = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section"], optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"], optional = true }
cc = { version = "1", optional = true }

[dev-dependencies]
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
