[package]
name = "reconfigurable-device"
version = "0.1.0"
authors = ["Tuomas Keyriläinen <tuomas.keyrilainen@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "reconfigurable-device"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
required-features = ["esp"]

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp", "lite-json", "scripting"]
std = []
esp = ["dep:esp-idf-svc", "dep:embedded-svc", "dep:embuild"]
gpio = ["dep:toml", "dep:serde"]
lite-json = []
scripting = ["std", "dep:cc"]
psram = []
mem-stats = []

deny_api_during_provisioning = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section"], optional = true }
embedded-svc = { version = "0.28", default-features = false, optional = true }
miniz_oxide = { version = "0.8", optional = true }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"], optional = true }
cc = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
object = { version = "0.36", default-features = false, features = ["read", "elf"] }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.4" }
