[project]
name = "reconfigurable-device-e2e"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pytest>=8.0", "requests>=2.31", "websockets>=13.0"]

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "-x -v"
markers = [
    "reboot: tests that perform a hardware reboot via espflash",
    "stress: long-running stress and stability tests",
]
